[package]
name = "cumulus-primitives-utility"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.10" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.10" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.10" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.10" }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/zqhxuyuan/polkadot", default-features = false, branch = "tests_xcm" }
polkadot-primitives = { git = "https://github.com/zqhxuyuan/polkadot", default-features = false, branch = "tests_xcm" }
polkadot-core-primitives = { git = "https://github.com/zqhxuyuan/polkadot", default-features = false, branch = "tests_xcm" }
xcm = { git = "https://github.com/zqhxuyuan/polkadot", default-features = false, branch = "tests_xcm" }

cumulus-primitives-core = { path = "../core", default-features = false }

# Other dependencies
impl-trait-for-tuples = "0.2.1"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"polkadot-primitives/std",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"sp-runtime/std",
	"sp-trie/std",
	"frame-support/std",
	"cumulus-primitives-core/std",
]
